added indexhtml file

--- a/indexhtml.html
+++ b/indexhtml.html
@@ -6,7 +6,7 @@
     <title>football page</title>
   </head>
   <body>
-    <h1>Football</h1>
+    <h1><strong>Football</strong></h1>
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Soccerball.svg"
       alt="Football"
@@ -14,13 +14,19 @@
       height="200"
       target="_blank"
     />
+
+    <h2>Football is a popular sport played worldwide.</h2>
+    <p>
+      <strong>The FIFA World Cup </strong> is the most famous football
+      tournament. Many countries have their own professional leagues.
+    </p>
+
+    <h1>
+      <a href="https://www.fifa.com/worldcup/" target="_blank"
+        >FIFA World Cup
+      </a>
+    </h1>
     <ul>
-      <li>Football is a popular sport played worldwide.</li>
-      <li>The FIFA World Cup is the most prestigious football tournament.</li>
-      <li>Many countries have their own professional leagues.</li>
-    </ul>
-    <ul>
-      <li><a href="https://www.fifa.com/worldcup/">FIFA World Cup </a></li>
       <li>
         <a href="#">Home</a>Football is played in over 200 countries, making it
         a truly global game.
@@ -48,7 +54,7 @@
     <ul>
       <li><a href="#">English Premier League </a></li>
 
-      <li><a href="#">Serie A</a></li>
+      <li><a href="#">Series A</a></li>
     </ul>
   </body>
 </html>
